--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,7 @@
 {% endblock %}
 
 {% block content %}
-  <h1>Index</h1>
-  <p class="important">
-    Welcome to my awesome homepage.
-  </p>
+  <h1>Smart Mirror</h1>
+
+  <div id="clock"></div>
 {% endblock %}
