--- a/templates/base.html
+++ b/templates/base.html
@@ -4,15 +4,15 @@
     {% block head %}
       <title>{% block title %}{% endblock %} - Mirror Pila!</title>
 
-      <link rel="stylesheet" href="/assets/css/main.css" />
+      <link rel="stylesheet" href="/static/assets/css/main.css" />
     {% endblock %}
   </head>
   <body>
     <div id="content">{% block content %}{% endblock %}</div>
       <div id="footer">
-      {% block footer %}
-        &copy; Copyright 2008 by <a href="http://domain.invalid/">you</a>.
-      {% endblock %}
     </div>
+
+    <script src="/static/assets/js/moment.min.js"></script>
+    <script src="/static/assets/js/main.js"></script>
   </body>
 </html>
