Importing weather icons. Setup config file in defaults.cfg.  Using Open Weather Maps to get area weather and forecast.  Created new route to return JSON from Open Weather Maps and added JavaScript to populate the weather div HTML and update every hour.

--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -9,8 +9,12 @@ body, html {
 }
 
 #time {
-  font-size: 4rem;
+  font-size: 5rem;
 }
 #date {
   font-size: 1rem;
+}
+
+.weather-icon {
+  width: 5em;
 }
