--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
     </div>
 
     <script src="/static/assets/js/moment.min.js"></script>
+    <script src="/static/assets/js/axios.min.js"></script>
     <script src="/static/assets/js/main.js"></script>
   </body>
 </html>
