--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,17 @@
 {% endblock %}
 
 {% block content %}
-  <h1>Smart Mirror</h1>
+  <br/>
+  <br/>
+  <br/>
 
   <div id="clock"></div>
+
+  <br/><br/>
+
+  <div id="weather"></div>
+
+  <br/><br/>
+
+  <div id="forecast"></div>
 {% endblock %}
