Adjusted margin for .conainer div, renamed that start.command file, and moved all HTML markup into the Jinja template to use getElementById to set the innerHTML.

--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -3,9 +3,9 @@ body, html {
   color: #ffffff;
 }
 
-#content {
-  max-width: 90%;
-  margin: 0 auto;
+.container {
+  max-width: 100%;
+  /*margin: 0 auto;*/
 }
 
 #time {
