--- a/templates/base.html
+++ b/templates/base.html
@@ -4,13 +4,16 @@
     {% block head %}
       <title>{% block title %}{% endblock %} - Mirror Pila!</title>
 
+      <meta charset="utf-8"/>
+
+      <link rel="stylesheet" href="/static/assets/css/simple-grid.css" />
       <link rel="stylesheet" href="/static/assets/css/main.css" />
     {% endblock %}
   </head>
   <body>
-    <div id="content">{% block content %}{% endblock %}</div>
-      <div id="footer">
-    </div>
+    <div class="container">{% block content %}{% endblock %}</div>
+
+    <div id="footer"> </div>
 
     <script src="/static/assets/js/moment.min.js"></script>
     <script src="/static/assets/js/axios.min.js"></script>
