Added Handlebars and created a Handlebar template for displaying the 5 day Forecast information.

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
 
     <script src="/static/assets/js/moment.min.js"></script>
     <script src="/static/assets/js/axios.min.js"></script>
+    <script src="/static/assets/js/handlebars.js"></script>
     <script src="/static/assets/js/main.js"></script>
   </body>
 </html>
