--- a/templates/index.html
+++ b/templates/index.html
@@ -64,6 +64,12 @@
 
   <br/><br/>
 
+  <div class="forecast-label row">
+    <div class="col-12">
+      <h2>Forecast</h2>
+    </div>
+  </div>
+
   <div class="row">
       <div id="forecast-html">
       </div>
