--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,25 @@
     </div>
 
     <div class="col-6">
-      <div id="clock"></div>
+      <div class="row">
+        <div class="col-12">
+          <div id="clock"></div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-12">
+
+          <h2>Outside Temp: <span id="outside-temp"></span>&deg;</h2>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-12">
+
+          <h2>Inside Temp: <span id="inside-temp"></span>&deg;</h2>
+        </div>
+      </div>
     </div>
   </div>
 
