Importing wakey.py and shell scripts to turn monitor on if motion is detected on GPIO pin 4 using a PIR motion sensor.

--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,7 @@
         <div class="col-12">
 
           <h2>Outside Temp: <span id="outside-temp"></span>&deg;</h2>
-        </div>
+          <p>Humidity: <span id="outside-humidity"></span>%</p>
       </div>
 
       <div class="row">
