--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,7 +5,12 @@ html(lang="en")
 
     meta(charset="utf-8")
 
-    block scripts
+    block styles
+      link(rel="stylesheet", href="/js/style.css")
 
   body
     block content
+
+    block scripts
+      script(src='/js/vendor.js')
+      script(src='/js/bundle.js')
