Have React setup and rendering App component to index.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,9 +1,9 @@
 body {
-  background-color: #cccccc;
+  background-color: #000000;
 }
 
 #app {
-  background-color: white;
+  color: white;
   max-width: 600px;
   margin: 0 auto;
   padding: 3em;
