--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,7 +6,7 @@ html(lang="en")
     meta(charset="utf-8")
 
     block styles
-      link(rel="stylesheet", href="/js/style.css")
+      link(rel="stylesheet", href="/css/style.css")
 
   body
     block content
